--- a/my-project/index.html
+++ b/my-project/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-project</title>
+    <title>Taylor Swift Albums</title>
     <link href="/src/style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <h1 class="text-3xl font-bold underline">Taylor Swift Albums</h1>
+    <h2 id="api-response"></h2>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
