--- a/my-project/index.html
+++ b/my-project/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1 class="text-3xl font-bold underline">Taylor Swift Albums</h1>
     <h2 id="api-response"></h2>
+    <div id="container"></div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
