--- a/my-project/index.html
+++ b/my-project/index.html
@@ -5,19 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taylor Swift Albums</title>
-    <link href="/src/style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">Taylor Swift Albums</h1>
-    <div class="api-response" id="api-response">
+    <h1 class="text-3xl font-bold underline bg-red-500">Taylor Swift Albums</h1>
+    <div id="search-bar" class="justify-center mx-auto">
       <input
         id="searchbar"
         onkeyup="searchAlbum()"
-        type="text"
-        name="search"
+        type="search"
         placeholder="Search albums.."
       />
     </div>
+
+    <div class="bg-blue-500 justify-around mx-auto" id="api-response"></div>
     <!-- <h2 id="api-response"></h2> -->
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
