--- a/my-project/index.html
+++ b/my-project/index.html
@@ -12,11 +12,11 @@
       <input
         id="searchbar"
         onkeyup="searchAlbum()"
-        type="search"
+        type="text"
         placeholder="Search albums.."
       />
     </div>
-
+    <div id="search-display"></div>
     <div class="bg-blue-500 justify-around mx-auto" id="api-response"></div>
     <!-- <h2 id="api-response"></h2> -->
     <div id="app"></div>
