--- a/my-project/index.html
+++ b/my-project/index.html
@@ -9,14 +9,8 @@
   <body>
     <h1 class="text-3xl font-bold underline bg-red-500">Taylor Swift Albums</h1>
     <div id="search-bar" class="justify-center mx-auto">
-      <input
-        id="searchbar"
-        onkeyup="searchAlbum()"
-        type="text"
-        placeholder="Search albums.."
-      />
+      <input id="searchbar" type="text" placeholder="Search albums.." />
     </div>
-    <div id="search-display"></div>
     <div class="bg-blue-500 justify-around mx-auto" id="api-response"></div>
     <!-- <h2 id="api-response"></h2> -->
     <div id="app"></div>
