--- a/my-project/index.html
+++ b/my-project/index.html
@@ -10,8 +10,12 @@
     <h1 class="text-3xl font-bold underline bg-red-500">Taylor Swift Albums</h1>
     <div id="search-bar" class="justify-center mx-auto">
       <input id="searchbar" type="text" placeholder="Search albums.." />
+      <button id="search-button">Search</button>
     </div>
-    <div class="bg-blue-500 justify-around mx-auto" id="api-response"></div>
+    <div
+      class="bg-blue-500 justify-around flex flex-col"
+      id="api-response"
+    ></div>
     <!-- <h2 id="api-response"></h2> -->
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
